@@ -2,15 +2,20 @@
 	
 	Quick install
 	-------------
-	
-type as root:
+  $ cd <viewcvsinstall>/tparse/	
+  $ python Setup.py build_ext
 
-$ python Setup.py build_ext
-in the /viewcvs/tparse directory will compile tparse.
 Normally, you can find a tparse.so dynamic library, in a directory called
 build/lib.****/
 where **** depends on OS.
 cd into that directory.
+now move the tparse.so in here into your lib/vclib/ccvs/rcsparse directory:
+  $ mv tparse.so <viewcvsinstall>/lib/vclib/ccvs/rcsparse/
+  $ cd <viewcvsinstall>/lib/vclib/ccvs/rcsparse/
+
+  Check your install
+  ------------------
+  
 Then check if tparse has been correctly installed: 
 $ python                                                              
 Python 2.1.2 (#1, Jan 21 2002, 04:12:22)
@@ -18,6 +23,4 @@ Python 2.1.2 (#1, Jan 21 2002, 04:12:22)
 Type "copyright", "credits" or "license" for more information.
 >>> import tparse
 >>> 
-This is ok.
-
-now move the tparse.so into your lib/rcsparse directory
+  Tparse is correctly installed!!!
